maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:16: error: 'case' expected but identifier found.
			Direction.NORTH => y-1;
                        ^JediEscaper:16: error: '}' expected but ';' found.
			Direction.NORTH => y-1;
                                              ^JediEscaper:17: error: not a legal formal parameter
			Direction.EAST => x+1;
                                  ^JediEscaper:18: error: not a legal formal parameter
			Direction.SOUTH => y+1;
                                  ^JediEscaper:19: error: not a legal formal parameter
			Direction.WEST => x-1;
                                  ^JediEscaper:31: error: expected class or object definition
def setIndications(x:Int, y:Int, valeur:Int) {
^JediEscaper:52: error: expected class or object definition
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
        ^JediEscaper:53: error: expected class or object definition
	def aMurNord(x:Int, y:Int):Boolean = hasTopWall(x,y)
        ^JediEscaper:54: error: expected class or object definition
	def aMurOuest(x:Int, y:Int):Boolean = hasLeftWall(x, y)
        ^JediEscaper:55: error: eof expected but '}' found.
}
^